--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,13 @@
             <version>${guava.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-            <optional>true</optional>
-        </dependency>
+             <dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-databind</artifactId>
+  <version>2.8.11.1</version>
+</dependency>
+       
+            
 
         <dependency>
             <groupId>com.sparkjava</groupId>
